--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,10 @@ body {
     background-color: rgb(15, 110, 169);
 }
 
+/* home.html */
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+
 #name {
     color:hsl(143, 86%, 63%);
     font-size: 125%;
@@ -51,3 +55,42 @@ li {
     display: inline;
     margin-right: 20px;
 }
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+
+/* about-me.html */
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+
+#about-me {
+    text-align:center;
+    text-decoration: underline;
+    background: black;
+    color:white;
+    margin-left: 40%;
+    margin-right: 40%;
+    border: solid 3px rgb(51, 227, 174);
+    border-radius: 1cm;
+    padding: 10px;
+}
+
+.description {
+    background-color: rgb(255, 255, 255);
+    padding: 15px;
+    border: solid 5px black;
+    margin: 0;
+    margin-left: 10cm;
+    margin-right: 10cm;
+    justify-content: baseline;
+}
+
+p {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 0.5cm;
+    line-height: 2.0em;
+    text-decoration:none;
+    text-wrap:balance;
+    text-indent: 100px;
+}
+/* ---------------------------------------- */
+/* ---------------------------------------- */
