--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -84,7 +84,7 @@ li {
     justify-content: baseline;
 }
 
-p {
+p.paragraph {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 0.5cm;
     line-height: 2.0em;
@@ -92,5 +92,25 @@ p {
     text-wrap:balance;
     text-indent: 100px;
 }
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+
+/* contact.html */
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+
+#contact-header {
+    color: white;
+    background-color: black;
+    padding: 15px;
+    border: solid 3px rgb(51, 227, 174);
+    border-radius: 1cm;
+    margin-left: 16cm; 
+    margin-right: 16cm;
+    text-align: center;
+    text-decoration: underline;
+    font-size: 1.9em;
+}
+
 /* ---------------------------------------- */
 /* ---------------------------------------- */
