Contact information such as email address, phone number, and a Linkedin should be included in the Contact segment
In addition to the Contact segment, I've included the image for Linkedin for users to take them directly to my Linkedin page when they click on the image with a new tab

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -112,5 +112,15 @@ p.paragraph {
     font-size: 1.9em;
 }
 
+.contact-details {
+    background-color: white;
+    padding: 10px;
+    border: solid 3px black;
+    border-radius: 1cm;
+    text-align:center;
+    margin-left: 20%;
+    margin-right: 20%;
+    font-size: 0.5cm;
+}
 /* ---------------------------------------- */
 /* ---------------------------------------- */
