--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,10 +23,12 @@ body {
 
 #nav {
     background-color: black;
+    border: solid 2px white;
     border-radius: 1cm;
     color: white;
     font-size: 18px;
-    padding: 10px;;
+    padding: 10px;
+    text-decoration: none;
 }
 
 .intro {
