My personal website has not been displaying correctly on Google Chrome, so I removed all the the directories from the project so that I can be able to have a correct path towards the homepage of my personal website

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -48,7 +48,7 @@ p.role {
     color: rgb(255, 255, 255);
 }
 
-div img {
+#image {
     border: solid 5px white;
     border-radius: 5cm;
     border-style:double;
