Project header added to the project html file
I have added a header to the project section of the website while I am currently working on a few projects to implement to this section.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -133,3 +133,23 @@ p.paragraph {
 }
 /* ---------------------------------------- */
 /* ---------------------------------------- */
+
+/* project.html */
+/* ---------------------------------------- */
+/* ---------------------------------------- */
+
+#project-header {
+    text-align: center;
+    background-color: black;
+    color: white;
+    border: solid 3px rgb(51, 227, 174);
+    border-radius: 1cm;
+    margin-left: 30%;
+    margin-right: 30%;
+    font-size: 200%;
+    padding: 10px;
+    text-decoration: underline;
+}
+
+/* ---------------------------------------- */
+/* ---------------------------------------- */
