--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -166,7 +166,31 @@ p.paragraph {
     border-radius: 1cm;
     margin-left: 43%;
     margin-right: 43%;
-    font-size: 30px;
     padding: 10px;
     text-decoration: underline;
 }
+
+#pro-lang-sub-header {
+    color:white;
+    background-color: black;
+    padding: 10px;
+    margin-left: 37%;
+    margin-right: 37%;
+    border: 3px solid rgb(0, 234, 255);
+    border-radius: 20px;
+    text-decoration:none;
+}
+
+#pro-images-1 
+{
+    display:flex;
+    padding: 20px;
+    gap: 50px;
+    margin: 20px;
+    background-color: antiquewhite;
+    border: solid 3px black;
+}
+
+
+/* ---------------------------------------- */
+/* ---------------------------------------- */
