--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -181,17 +181,89 @@ p.paragraph {
 /* ---------------------------------------- */
 /* ---------------------------------------- */
 
-#project-header {
+section.project {
     text-align: center;
+    font-size: 110%;
+}
+
+#project-header {
     background-color: black;
     color: white;
     border: solid 3px rgb(51, 227, 174);
     border-radius: 1cm;
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 40%;
+    margin-right: 40%;
     font-size: 200%;
     padding: 10px;
     text-decoration: underline;
+}
+
+div.list_of_projects ul {
+    margin: 20px auto 30px 50px;
+    margin-left:10px;
+    position: static;
+    line-height: 2.8em;
+    letter-spacing: 2px;
+    text-align:left;
+    display:inline-flex;
+    column-gap: 5cm;
+    font-size: 100%;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 500;
+    padding: 10px;
+}
+
+div.project {
+    padding: 10px;
+    margin: 10px 20px auto 20px;
+    background: repeating-linear-gradient(
+        rgba(76, 15, 182, 0.473),
+        rgb(94, 50, 180),
+        rgb(114, 84, 182), 
+        rgb(128, 120, 181)
+    );
+    border: 4px solid black;
+    border-radius: 10px;
+}
+
+div.project:hover {
+    border:4px solid rgb(255, 255, 255);
+}
+
+div.project a#git-links {
+    text-decoration: none;
+}
+
+h3#project-portfolio {
+    text-align:center;
+    text-decoration: underline;
+    text-transform: uppercase;
+    text-overflow: none;
+    border-bottom: 1px solid white;
+    font-size: 130%;
+    margin: auto;
+    text-shadow: 1px -1px 5px white;
+}
+
+p#project_description {
+    width: 500px;
+    line-height: 3.5em;
+    text-indent: 1cm;
+    text-overflow:none;
+    
+}
+
+div.images{
+    margin-left:5px;
+    border-radius: 20px;
+    background-color:rgba(0, 0, 0, 0.167);
+}
+
+div.project_tech, div.project_tech2{
+    display:inline-flex;
+    column-gap: 30px;
+    margin: auto 50px auto 70px;
+    padding: 10px;
 }
 
 /* ---------------------------------------- */
