Update overall background of the website
I've implemented a linear gradient background to each tab on the website

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(15, 110, 169);
+    background: repeating-linear-gradient(rgb(15, 162, 210), rgb(5, 28, 158));
+    margin: 34px; 
 }
 
 /* home.html */
